# wgpu_shader_checker

./: Cargo.toml  README.md
.github/workflows/: rust.yml
shaders/: fail.wgsl  meow.wgsl
src/: lib.rs
tests/: test.rs
tests/fail/: a.rs  bad_shader.rs  bad_shader.stderr  directory.rs  directory.stderr  empty_shader.rs  empty_shader.stderr  extra_parameters.rs  extra_parameters.stderr  no_file.rs  no_file.stderr  wrong_parameter.rs  wrong_parameter.stderr
tests/success/: good_shader.rs  good_shader1.rs
