[package]
name = "wgpu_shader_checker"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro=true


[dev-dependencies]
trybuild = "1.0.103"
#Still need this crate for build tests to work
wgpu = {version = "24.0.1", default-features = false, features = ["wgsl"]}

[dependencies]
naga = {version = "24.0.0", default-features = false, features = ["wgsl-in"]}
syn = {version = "2.0.98", default-features = false}
